feat(chat-bot): Add handling API key feature
User can add or change API key. Different UI for case when you have API key and when you don't

--- a/package.json
+++ b/package.json
@@ -49,16 +49,16 @@
 				"title": "Add Color"
 			},
 			{
-				"command": "calicoColors.clearColors",
+				"command": "calicoColors.askApiKey",
 				"category": "Calico Colors",
-				"title": "Clear Colors",
-				"icon": "$(clear-all)"
+				"title": "Изменить API-ключ",
+				"icon": "$(plug)"
 			}
 		],
 		"menus": {
 			"view/title": [
 				{
-					"command": "calicoColors.clearColors",
+					"command": "calicoColors.askApiKey",
 					"group": "navigation",
 					"when": "view == calicoColors.colorsView"
 				}
