--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
 	"main": "./out/extension.js",
 	"contributes": {
 		"views": {
-			"package-explorer": [
+			"GPTrus": [
 				{
 					"id": "GPTRus.chatView",
 					"type": "webview",
-					"name": "Calico Colors",
+					"name": "Chat",
 					"icon": "media/chat-emoji-svgrepo-com.svg",
 					"contextualTitle": "Package Explorer"
 				}
@@ -38,8 +38,8 @@
 		"viewsContainers": {
 			"activitybar": [
 				{
-					"id": "package-explorer",
-					"title": "Package Explorer",
+					"id": "GPTrus",
+					"title": "GPTrus",
 					"icon": "media/chat-emoji-svgrepo-com.svg"
 				}
 			]
@@ -51,9 +51,9 @@
 				"title": "Add Color"
 			},
 			{
-				"command": "GPTRus.askApiKey",
+				"command": "GPTRus.goToSettings",
 				"category": "Calico Colors",
-				"title": "Изменить API-ключ",
+				"title": "Настроить заново",
 				"icon": "$(plug)"
 			},
 			{
@@ -66,7 +66,7 @@
 		"menus": {
 			"view/title": [
 				{
-					"command": "GPTRus.askApiKey",
+					"command": "GPTRus.goToSettings",
 					"group": "navigation",
 					"when": "view == GPTRus.chatView"
 				},
